# CaIEngine

./: .gitignore  CLAUDE.md  CmakeLists.txt  README.md  Renderer.cpp  Triangle.cpp
.cache/clangd/index/: BaseScene.cpp.39BC057352E3E858.idx  BaseScene.h.18B5CDF9959A045E.idx  BloomingPass.cpp.10736E2853005980.idx  BloomingPass.h.53ED2A96CE12C8D9.idx  CaIMaterial.cpp.5C1EAE605CE1281D.idx  CaIMaterial.h.1E63D2BABBD02B1F.idx  CaIShader.cpp.0D6C72621125424B.idx  CaIShader.h.1FFD9DB4D94A2747.idx  Camera.cpp.DECE42622C942A17.idx  (+73 more)
FrameWork/: Application.cpp  Application.h  BaseScene.cpp  BaseScene.h  CaIMaterial.cpp  CaIMaterial.h  CaIShader.cpp  CaIShader.h  Camera.cpp  Camera.h  CmakeLists.txt  CompMaterial.cpp  CompMaterial.h  CompShader.cpp  CompShader.h  DescriptorPool.cpp  DescriptorPool.h  DotLight.cpp  DotLight.h  FrameWorkGUI.cpp  FrameWorkGUI.h  InputManager.cpp  InputManager.h  Light.h  Locator.h  Logger.h  PubEnum.hpp  PublicEnum.h  PublicStruct.h  RenderQueue.cpp  RenderQueue.h  RenderQueueManager.cpp  RenderQueueManager.h  Resource.cpp  Resource.h  Scene.h  Serialize.h  ShaderParse.cpp  ShaderParse.h  Slot.cpp  (+25 more)
FrameWork/FrameGraph/: FrameGraph.cpp  FrameGraph.h  RenderPassManager.cpp  RenderPassManager.h  ResourceManager.cpp  ResourceManager.h  ThreadPool.h
FrameWork/thirdPart/: CmakeLists.txt
FrameWork/thirdPart/imgui/: CMakeLists.txt
Scene/: LTCScene.cpp  LTCScene.h
resources/log/: log.txt
resources/test/: testComp.comp  testComp.comp.spv  testComp.compshader  testShader.caishader  testShader.frag  testShader.frag.spv  testShader.vert  testShader.vert.spv
test/: CMakeLists.txt  FrameGraphTest.cpp  LoggerTest.cpp  ParserTest.cpp  RenderQueueTest.cpp  SerializeTest.cpp  threadPoolTest.cpp
(+78 files in other folders)
